[package]
name = "the_beta"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
seed = {git = "https://github.com/David-OConnor/seed.git"}#}"^0.4.1"
wasm-bindgen = "^0.2.51"



# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.101", features = ['derive'] }

futures = "^0.1.29"
gloo = {version = "*", features=['futures']}

[dependencies.web-sys]
version = "^0.3.28"
features = [
'Navigator',
'Geolocation',
'Position',
'Coordinates',
'PositionOptions'
]


#[dev-dependencies]
#wasm-bindgen-test = "0.2.45" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'